cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(custom_ops)

#set(Torch_DIR /home/tsui/yujc/testcpptorch/libtorch/share/cmake/Torch)
set(CMAKE_PREFIX_PATH "/home/tsui/yujc/testcpptorch/libtorch")
find_package(Torch REQUIRED)
find_package(OpenCV REQUIRED )
MESSAGE(STATUS "opencv: ${OpenCV_INCLUDE_DIRS}")
MESSAGE(STATUS "torch: ${TORCH_INCLUDE_DIRS}")
include_directories(include ${TORCH_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} )

add_library(superpoint SHARED src/superpoint.cpp)
set_property(TARGET superpoint PROPERTY CXX_STANDARD 11)
SET(LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/./lib")
add_executable(example-app src/example-app.cpp)
link_libraries("${TORCH_LIBRARIES}")
link_libraries("${PROJECT_SOURCE_DIR}/lib/libsuperpoint.so")
link_libraries("${OpenCV_LIBRARIES}")
set_property(TARGET example-app PROPERTY CXX_STANDARD 11)
